--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@inertiajs/inertia-react": "^0.8.1",
         "@vitalets/google-translate-api": "^9.2.0",
+        "react-bootstrap": "^2.9.1",
         "react-paginate": "^8.2.0"
     }
 }
